<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_today"
        android:title="Today"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_all"
        android:title="All Todos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar"
        android:title="Calendar View"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hide_completed"
        android:checkable="true"
        android:title="Hide Completed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_todos"
        android:title="@string/export_todos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_todos"
        android:title="@string/import_todos"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_notification"
        android:title="Test Notification"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_seed_data"
        android:title="Seed Sample Todos"
        app:showAsAction="never" />

</menu>
